--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,22 @@
+.holder{
+    display: flex;
+    border: 2px solid black;
+    background-color: yellow;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
 
+.flex-container{
+    display: flex;
+    border: 2px solid black;
+    background-color: yellow;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.item{
+    border: 2px solid black;
+    padding: 75px;
+    background-color:red;
+}
 /* Your CSS Code here. */
